# VerbsItaDeuGTK

./: .gitignore  Makefile.am  README  configure.ac
src/: Makefile.am  interface_verbs.c  main.c  verbs.txt
src/include/: interface_verbs.h  widgets_struct.h
src/lib/: Makefile.am  verbs.c  verbs.h
